--- a/themes/countrycrafts/partials/cards/commission-card.htm
+++ b/themes/countrycrafts/partials/cards/commission-card.htm
@@ -1,13 +1,13 @@
-<article class="flex flex-row justify-end {{ bgColor }} rounded-2xl w-4/12 h-96 relative">
-    <img src="{{ img|theme }}" alt="handcrafted" class="w-auto h-96 rounded-2xl absolute -left-8 bottom-6 z-20">
-    <div class="flex flex-row justify-between w-8/12 py-8 pr-8">
-        <div class="flex flex-col space-y-4 w-6/12 font-architects">
-            <input class="bg-slate-100 border-yellow-500 border-2 rounded-lg h-auto pl-3 w-full" type="email" placeholder="Email">
-            <input class="bg-slate-100 border-yellow-500 border-2 rounded-lg h-auto pl-3 w-full" type="text" placeholder="Subject">
-            <textarea class="bg-slate-100 border-yellow-500 border-2 rounded-lg h-auto pl-3 w-full" cols="30" rows="10" name="body" id="body" Placeholder="Type Your Message..."></textarea>
+<article class="flex flex-row justify-end {{ bgColor }} rounded-2xl w-11/12 mx-auto lg:w-9/12 3xl:w-7/12 4xl:w-6/12 5xl:w-5/12 lg:h-96 relative">
+    <img src="{{ img|theme }}" alt="handcrafted" class="w-auto h-96 hidden lg:block rounded-2xl absolute -left-8 bottom-6 z-20">
+    <div class="flex flex-col lg:flex-row justify-between w-full space-y-4 lg:w-8/12 py-8 px-3 lg:px-0 lg:pr-8">
+        <div class="flex flex-col space-y-4 w-full lg:w-6/12 font-architects">
+            <input class="bg-slate-100 border-mom-yellow border-2 rounded-lg h-auto pl-3 w-full" type="email" placeholder="Email">
+            <input class="bg-slate-100 border-mom-yellow border-2 rounded-lg h-auto pl-3 w-full" type="text" placeholder="Subject">
+            <textarea class="bg-slate-100 border-mom-yellow border-2 rounded-lg h-auto pl-3 w-full" cols="30" rows="10" name="body" id="body" Placeholder="Type Your Message..."></textarea>
             <button class="text-white border-green-700 border-2 bg-green-500 py-2 px-4 rounded-xl">SUBMIT</button>
         </div>
-        <div class="flex flex-col w-5/12">
+        <div class="flex flex-col w-full lg:w-5/12">
             <h1 class="text-5xl text-mom-yellow font-dancing">{{title}}</h1>
             <p class="text-xl text-white font-architects mt-3">
                 {{text}}
