fixed blog need to finish store items

--- a/themes/countrycrafts/partials/cards/post-card.htm
+++ b/themes/countrycrafts/partials/cards/post-card.htm
@@ -1,7 +1,7 @@
-<article class="flex flex-col justify-between {{ bgColor }} rounded-2xl w-9/12 h-auto relative">
-    <img src="{{ img|theme }}" alt="handcrafted" class="w-auto h-80 rounded-2xl absolute -left-8 -top-10 z-20">
+<article class="flex flex-col justify-between {{ bgColor }} rounded-2xl w-11/12 mx-auto lg:w-9/12 h-auto relative">
+    <img src="{{ img|theme }}" alt="handcrafted" class="w-auto h-80 rounded-2xl absolute lg:-left-8 -top-10 z-20">
     <div class="flex flex-row justify-end w-full">
-        <div class="flex flex-col justify-end w-7/12 py-8 pr-8">
+        <div class="flex flex-col justify-end w-11/12 mt-72 lg:mt-0 lg:w-7/12 py-8 pr-8">
             <h1 class="text-5xl text-mom-yellow font-dancing">
                 {{title}}
             </h1>
