--- a/themes/countrycrafts/partials/cards/hori-card.htm
+++ b/themes/countrycrafts/partials/cards/hori-card.htm
@@ -16,7 +16,7 @@
     {% endif %}
     <div class="flex flex-row justify-end w-full">
         <div class="flex flex-col place-items-center lg:place-items-end mx-auto lg:mx-0 w-10/12 lg:w-5/12 py-8 lg:pr-8">
-            <h3 class="text-2xl xl:text-3xl text-center text-mom-red font-dancing text-shadow-lg">{{title}}</h3>
+            <h3 class="text-2xl xl:text-3xl text-center text-white font-dancing text-shadow-lg">{{title}}</h3>
             <p class="text-xl lg:text-lg text-white font-architects mt-3">
                 {{text}}
             </p>
