--- a/themes/countrycrafts/partials/cards/hori-card.htm
+++ b/themes/countrycrafts/partials/cards/hori-card.htm
@@ -10,11 +10,11 @@
     </div>
     {% endif %}
     {% if img %}
-    <div class="flex flex-row absolute -right-3 lg:-left-8 -top-8 z-20">
+    <div class="flex flex-row absolute -right-3 lg:-left-8 -top-8">
         <img src="{{ img }}" alt="handcrafted" class="w-auto h-44 lg:h-60 xl:h-80 rounded-2xl">
     </div>
     {% endif %}
-    <div class="flex flex-row justify-end w-full">
+    <div class="flex flex-row justify-end w-full z-20">
         <div class="flex flex-col place-items-center lg:place-items-end mx-auto lg:mx-0 w-10/12 lg:w-5/12 py-8 lg:pr-8">
             <h3 class="text-2xl xl:text-3xl text-center text-white font-dancing text-shadow-lg">{{title}}</h3>
             <p class="text-xl lg:text-lg text-white font-architects mt-3">
