--- a/themes/countrycrafts/partials/cards/vert-card.htm
+++ b/themes/countrycrafts/partials/cards/vert-card.htm
@@ -7,7 +7,7 @@
         </p>
         <div class="flex flex-row justify-end">
             {% if link %}
-                <a class="text-3xl text-mom-yellow font-dancing" href="/store/item/{{link[1]}}">Purchase</a>
+                <a class="text-3xl text-mom-yellow font-dancing" href="{{link[1]}}">Purchase</a>
             {% endif %}
         </div>
     </div>
