--- a/themes/countrycrafts/partials/cards/purchase-card.htm
+++ b/themes/countrycrafts/partials/cards/purchase-card.htm
@@ -1,5 +1,3 @@
-[StripeCheckout]
-==
 <article class="flex flex-col justify-between {{ bgColor }} rounded-2xl w-4/12 h-auto relative space-y-6 p-3">
     <div class="flex flex-row justify-end p-3">
         <div class="flex flex-row space-x-5 absolute -left-8 -top-8 z-20">
@@ -16,20 +14,23 @@
                 {{text}}
             </p>
             <div class="my-6">
-                {% component 'StripeCheckout' %}
+                {% partial 'stripeFE/checkoutbtn' %}
             </div>
         </div>
     </div>
     <div class="flex flex-col mx-6 space-y-6 my-8 pt-6 font-architects">
         <div class="flex flex-row justify-between mt-8 space-x-5 w-6/12">
             <label>
-                <input class="border-mom-yellow border-2 rounded-lg h-auto pl-3 w-full bg-slate-100" type="email" placeholder="Email">
+                <input class="border-mom-yellow border-2 rounded-lg h-auto pl-3 w-full bg-slate-100" type="email"
+                    placeholder="Email">
             </label>
             <label>
-                <input class="border-mom-yellow border-2 rounded-lg h-auto pl-3 w-full bg-slate-100" type="email" placeholder="Email">
+                <input class="border-mom-yellow border-2 rounded-lg h-auto pl-3 w-full bg-slate-100" type="email"
+                    placeholder="Email">
             </label>
         </div>
-        <label for="body"></label><textarea class="border-yellow-500 border-2 rounded-lg pl-3 w-full h-60 bg-slate-100" name="body" id="body" Placeholder="Type Your Message..."></textarea>
+        <label for="body"></label><textarea class="border-yellow-500 border-2 rounded-lg pl-3 w-full h-60 bg-slate-100"
+            name="body" id="body" Placeholder="Type Your Message..."></textarea>
         <div class="flex flex-row justify-end">
             <button class="text-white border-green-700 border-2 bg-green-500 py-1 px-4 rounded-xl w-32">SUBMIT</button>
         </div>
