--- a/themes/countrycrafts/partials/stripeFE/checkoutbtn.htm
+++ b/themes/countrycrafts/partials/stripeFE/checkoutbtn.htm
@@ -11,7 +11,8 @@
                 await fetch('/api_rbm_stripe/checkout', {
                     method: 'POST',
                     headers: {'Content-Type': 'application/json'}
-                }).then((response) => response.text()).then(console.log);
+                }).then((response) => response.text()).then(console.log)
+                    .catch(() => console.error('qwerty'));
             }
         }));
     });
